k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erapport
  namespace: erapport
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: erapport.app.emfnet.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erapport
                port:
                  name: http
